src/test/ui/shadowed-lifetime.stderr
error[E0496]: lifetime name `'a` shadows a lifetime name that is already in scope
  --> $DIR/shadowed-lifetime.rs:17:25
   |
15 | impl<'a> Foo<'a> {
   |      -- first declared here
16 |     //~^ NOTE  first declared here
17 |     fn shadow_in_method<'a>(&'a self) -> &'a isize {
   |                         ^^ lifetime 'a already in scope

error[E0496]: lifetime name `'b` shadows a lifetime name that is already in scope
  --> $DIR/shadowed-lifetime.rs:25:20
   |
23 |     fn shadow_in_type<'b>(&'b self) -> &'b isize {
   |                       -- first declared here
24 |         //~^ NOTE  first declared here
25 |         let x: for<'b> fn(&'b isize) = panic!();
   |                    ^^ lifetime 'b already in scope

error: aborting due to 2 previous errors

